# BGM111-BGLib

./: CMakeLists.txt
bglib/: gecko_bglib.c
include/: bg_errorcodes.h  bg_types.h  gecko_bglib.h  gecko_configuration.h  host_gecko.h
work/include/: uart.hpp
work/source/: main.cpp  uart.c
wstk_bgapi_gpio/: main.c  main_compacted.c  uart.h  uart_win.c  wstk_bgapi_gpio.sln  wstk_bgapi_gpio.vcxproj
